welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:37: error: value or is not a member of Boolean
	if (getCouleurSol() == Color.PINK or getCouleurSol() == Color.ORANGE ) {   //test couleur
                                          ^